update wording data types/tables UserId: 597405

--- a/chapter2.Rmd
+++ b/chapter2.Rmd
@@ -349,8 +349,10 @@ data(murders)
 
 `@sample_code`
 ```{r}
-# Here is an example of what the table function does
+# The "c" in `c()` is short for "concatenate," which is the action of connecting items into a chain
+# The function `c()` connects all of the strings within it into a single vector, which we can assign to `x`
 x <- c("a", "a", "b", "b", "b", "c")
+# Here is an example of what the table function does
 table(x)
 
 # Write one line of code to show the number of states per region
