--- a/chapter3.Rmd
+++ b/chapter3.Rmd
@@ -753,7 +753,8 @@ x <- c(1, 3, 5,"a")
 ```
 
 - Notice that `x` has been coerced into a character string.
-- Convert `x` to a vector of numbers using the `as.numeric()` function.
+- If we assign something new to a vector that we've already created, the new definition replaces whatever was previously assigned to the vector.
+	- Convert `x` to a vector of numbers using the `as.numeric()` function.
 
 `@hint`
 Make sure you put the numbers within "".
